--- a/components/StarBorder.css
+++ b/components/StarBorder.css
@@ -29,6 +29,13 @@
   z-index: 0;
 }
 
+@media (max-width: 640px) {
+  .border-gradient-bottom, .border-gradient-top {
+    width: 150%;
+    opacity: 0.5;
+  }
+}
+
 .inner-content {
   position: relative;
   border: 1px solid rgba(255, 255, 255, 0.05);
